Solución de bug en login y usuario en produccion

--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -8,6 +8,7 @@
                 <label class="control-label" for="jefe">Solicitante:</label><br>
                 <select id="jefe" formControlName="solicitante" class="form-control">
                     <option disabled>ASG</option>
+                    <option *ngIf="updateG"  disabled [value]="updateG?.solicitante">{{updateG?.solicitante}} </option>
                     <option *ngFor="let jefe of jefes" >{{jefe.correo}} </option>
                   </select>
             </div>
@@ -16,6 +17,7 @@
                 <label class="control-label" for="proyecto">Proyecto:</label><br>
                 <select id="proyecto" class="form-control" formControlName="proyecto" (change)="valor(gastosForm.value.proyecto)">
                     <option disabled value='Proyecto'>Proyecto</option>
+                    <option *ngIf="updateG"  disabled [value]="updateG?.proyecto">{{updateG?.proyecto}} </option>
                     <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
                   </select>
                 <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
@@ -89,7 +91,7 @@
                 <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
 
                     <div id="filesButton">
-                        <input id="fichero" type="file" accept="image/*; application/pdf;'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';'application/vnd.ms-excel'" (change)="botonFiles($event)">
+                        <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls" (change)="botonFiles($event)">
                         <label for="fichero" class="circle"></label>
                     </div>
                 </div>
