--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,13 +9,13 @@
                     <form [formGroup]="loginForm " (ngSubmit)="onSubmit() ">
                         <div id="formulario" class="md-form ">
                             <mdb-icon fas icon="user" class="dark-grey-text mr-2 "></mdb-icon> <label for="username">Correo</label>
-                            <input type="email" id="username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors } " (change)="cambioUser($event)">
+                            <input type="email" id="username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors } ">
                             <p id="error " class="mt-2 " *ngIf="loginForm.get( 'username').hasError( 'required') && submitted ">* Este campo no puede ir vacío</p>
                             <p id="error2 " class="mt-2 " *ngIf="loginForm.get( 'username').hasError( 'email') && submitted ">*Correo Invalido</p>
                         </div>
                         <div id="formulario1" class="md-form ">
                             <mdb-icon fas icon="lock " class="dark-grey-text mr-2 "></mdb-icon> <label for="pass ">Contraseña</label>
-                            <input type="password" id="pass" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors } " autocomplete="on" (change)="cambioPass($event)">
+                            <input type="password" id="pass" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" autocomplete="on">
                             <p id="error " class="mt-2 " *ngIf="loginForm.get( 'password').hasError( 'required') && submitted ">* Este campo no puede ir vacío</p>
                             <p id="error2 " class="mt-2 " *ngIf="loginForm.get( 'password').hasError( 'minlength')">* Min. 6 caracteres</p>
                         </div>
