--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -56,8 +56,8 @@
                         <br>
                         <div class="mt-3 col-md-3">
                             <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
-                            <p #error id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
                             <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual?.fecha}}">
+                            <p #error id="error" *ngIf="submitted && ofForm.get('fecha').hasError('required')">*Este campo no puede ir vacío</p>
                         </div>
                     </div>
                 </div>
@@ -66,9 +66,12 @@
                     <div class="mt-3 class">
                         <label class="control-label" for="monto">Monto: </label>
                         <input class="form-control" id="monto" placeholder="Monto" formControlName="cantidad" type="number" min="1" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
+                        <p id="error" *ngIf="submitted && ofForm.get('cantidad').hasError('required')">*Este campo no puede ir vacío</p>
+
                         <br/>
                         <label class="control-label" for="descripcion">Motivo: </label>
                         <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
+                        <p id="error" *ngIf="submitted && ofForm.get('motivo').hasError('required')">*Este campo no puede ir vacío</p>
                         <br/>
                     </div>
                 </div>
@@ -79,7 +82,7 @@
                         <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
 
                             <div id="filesButton">
-                                <input id="fichero" type="file" accept="image/*; application/pdf;'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';'application/vnd.ms-excel'" (change)="botonFiles($event)">
+                                <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls" (change)="botonFiles($event)">
                                 <label for="fichero" class="circle"></label>
                             </div>
                         </div>
