--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -13,12 +13,12 @@
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="ap_m">Apellido Materno: </label>
                     <input class="form-control-sm" id="ap_m" placeholder="Apellido Materno" formControlName="ap_m" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_m.errors }">
-
+                    <p id="error" class="error" *ngIf="submitted && fval.ap_m.invalid">*Este campo no puede ir vacío</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="nombre">Nombre(s): </label>
                     <input class="form-control-sm" id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
-                    <p id="error" class="error" *ngIf="submitted && fval.ap_m.invalid">*Este campo no puede ir vacío</p>
+                    <p id="error" class="error" *ngIf="submitted && fval.nombre.invalid">*Este campo no puede ir vacío</p>
                 </div>
             </div><br>
             <div class="around">
@@ -28,17 +28,17 @@
                     <p id="error" class="error" *ngIf="userForm.get('correo').hasError('email')">*Correo Invalido</p>
                     <p id="error" class="error" *ngIf=" submitted && userForm.get('correo').hasError('required')">*Este campo no puede ir vacío</p>
                 </div><br>
-                <div *ngIf="tesorero || rolU || financiero" class="col-md-3 mt-3">
+                <div *ngIf="(tesorero || rolU || financiero) === true" class="col-md-3 mt-3">
                     <input type="text" id="vacio" disabled>
                 </div> <br>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="password">Contraseña: </label><br>
-                    <input class="form-control-sm" minlength="6" (change)="cambio($event.target.value)" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip" title="*Min 6 caracteres" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
+                    <input class="form-control-sm" minlength="6" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip" title="*Min 6 caracteres" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
                     <p id="error" class="error" *ngIf=" submitted && userForm.get('password').hasError('required')">*Este campo no puede ir vacío</p>
                     <p id="error" class="error" *ngIf=" submitted && userForm.get('password').hasError('minlength')">Mínimo 6 caracteres</p>
                 </div>
                 <br>
-                <div *ngIf="admin || aprobador" class="col-md-3 mt-3">
+                <div *ngIf="(admin || aprobador) === true" class="col-md-3 mt-3">
                     <label class="control-label" for="resp_area">Personal a su cargo: </label><br>
                     <label class="switch">
                         <input type="checkbox" formControlName="resp_area">
@@ -46,11 +46,12 @@
                       </label>
                 </div>
             </div><br>
-            <div *ngIf="admin || aprobador" class="around">
+            <div *ngIf="(admin || aprobador) === true" class="around">
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="resp_asg">Jefe Inmediato: </label><br>
                     <select id="resp_asg" formControlName="resp_asg" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                     <option disabled value='Jefe inmediato'>Jefe inmediato</option> 
+                     <option disabled value='Jefe inmediato'>Jefe inmediato</option>
+                     <option *ngIf="updateU" disabled value='{{updateU?.resp_asg}}'>{{updateU?.resp_asg}}</option> 
                      <option *ngFor="let resp of usuarios">{{resp.nombre}}</option> 
                      </select>
                     <p id="error" *ngIf="submitted && (fval.resp_asg.value === 'Jefe inmediato')">*Este campo no puede ir vacío</p>
@@ -62,23 +63,24 @@
                     <label class="control-label" for="area">Área: </label><br>
                     <select id="area" formControlName="area" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
                         <option *ngIf="!id_user" disabled value='Área'>Área</option>
-                        <option *ngIf="userU"  disabled [value]="updateU?.area" >{{updateU?.area}}</option>
+                        <option *ngIf="updateU" disabled [value]="updateU?.area" >{{updateU?.area}}</option>
                         <option *ngFor="let area of areas">{{area.nombre_area}}</option>
                     </select>
                     <p id="error" *ngIf="submitted && (fval.area.value === 'Área')">*Este campo no puede ir vacío</p>
                 </div>
             </div>
 
-            <div *ngIf="admin || aprobador" class="around">
+            <div *ngIf="(admin || aprobador) === true" class="around">
                 <div class=" col-md-3 mt-3">
                     <label class="control-label" for="rol">Rol: </label><br>
                     <select id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
                         <option  disabled value='Rol'>Rol</option>
-                        <option value="Administrador">ADMINISTRADOR</option>
-                        <option value="Aprobador">APROBADOR</option>
-                        <option value="Financiero">FINANCIERO</option>
-                        <option value="Tesorero">TESORERO</option>
-                        <option value="Usuario">USUARIO</option>
+                        <option *ngIf="updateU" disabled [value]="updateU?.rol" >{{updateU?.rol}}</option>
+                        <option value="Administrador">Administrador</option>
+                        <option value="Aprobador">Aprobador</option>
+                        <option value="Financiero">Financiero</option>
+                        <option value="Tesorero">Tesorero</option>
+                        <option value="Usuario">Usuario</option>
                     </select>
                     <p id="error" *ngIf="submitted && (fval.rol.value === 'Rol')">*Este campo no puede ir vacío</p>
                 </div>
@@ -115,15 +117,15 @@
                 <div *ngIf="id_user" class="col-md-3 mt-3 center">
                     <img *ngIf="!sameU" src="{{updateU?.imagen}}" width="100">
                 </div> <br>
-                <div class=" mt-3 col-md-3"><input type="text" id="vacio" disabled></div>
+                <div class="mt-3 col-md-3"><input type="text" id="vacio" disabled></div>
                 <br>
             </div>
             <br>
             <div *ngIf="actualizar" class="center">
                 <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class=" mr-3 fas fa-times"></i>
                     Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning" (click)="asignar()"><i class="mr-3 fas fa-sync-alt"></i>
-                        Actualizar</button>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+                Actualizar</button>
             </div>
             <div class="center">
                 <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
