--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class="text-center">
                             <br>
-                            <button class=" btn btn-outline-secondary ">Ingresar </button><br>
+                            <button mdbBtn mdbWavesEffect class=" btn btn-outline-light ">Ingresar </button><br>
                         </div>
                     </form>
                 </div>
