--- a/src/app/components/altas/registro-oficina/registro-oficina.component.css
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.css
@@ -6,11 +6,14 @@
 
 [data-tooltip]:hover:before {
     opacity: 1;
-    border-radius: 10%;
-    background-color: rgba(145, 141, 141, 0.863);
+    border-radius: 20px;
+    background-color: rgb(69, 69, 69);
     left: 80%;
     width: 100%;
+    min-height: 100px !important;
     top: -10px;
+    color: #fff !important;
+    padding: 7px;
 }
 
 [data-tooltip]:not([data-tooltip-persistent]):before {
