--- a/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
+++ b/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
@@ -18,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let el of elements; let i of index">
+            <tr *ngFor="let el of elements; index as i">
                 <td>{{el.solicitante}}</td>
                 <td>{{el.fecha}}</td>
                 <td style="text-align: right;">{{el.cantidad | currency }}</td>
@@ -28,7 +28,7 @@
                 <td *ngIf="!aprobador">{{el.aprobo}}</td>
                 <td>{{el.estatus}}</td>
                 <td>
-                    <button class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_gasto"> Ver comprobantes ...
+                    <button mdbBtn mdbWavesEffect class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_gasto"> Ver comprobantes ...
                     <div [attr.id]="el.id_gasto" class="modal fade">
                         <div class="modal-dialog modal-lg">
                             <!-- Modal content-->
@@ -37,7 +37,9 @@
                                        <img class="zoom m-2" *ngFor="let file of el.arrComprobantes" [src]="file" (click)="descargar(file)">
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                    <button  mdbBtn
+
+mdbWavesEffect  type="button" class="btn btn-light" data-dismiss="modal">Cerrar</button>
 </div>
 </div>
 </div>
@@ -46,8 +48,8 @@
 
 </td>
 <td>
-    <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
-    <button *ngIf="usuarioActual.rol==='Administrador' || (el.estatus !=='Pagado' && sameU)" type=" button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
+    <button mdbBtn mdbWavesEffect type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
+    <button mdbBtn mdbWavesEffect *ngIf="usuarioActual.rol==='Administrador' || (el.estatus !=='Pagado' && sameU)" type=" button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
 </td>
 </tr>
 
