--- a/src/app/components/registros/inv-oficina/inv-oficina.component.html
+++ b/src/app/components/registros/inv-oficina/inv-oficina.component.html
@@ -11,14 +11,14 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let el of elements; let i of index">
+            <tr *ngFor="let el of elements; index as i">
                 <td>{{el.resp_asg}}</td>
                 <td>{{el.fecha}}</td>
                 <td>{{el.id_partida}}</td>
                 <td style="text-align: right;">{{el.cantidad | currency }}</td>
                 <td>{{el.motivo}}</td>
                 <td>
-                    <button class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_of"> Ver comprobantes ...
+                    <button mdbBtn mdbWavesEffect class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_of"> Ver comprobantes ...
                     <div [attr.id]="el.id_of" class="modal fade">
                             <div class="modal-dialog modal-lg">
                                 <!-- Modal content-->
@@ -27,7 +27,9 @@
                                            <img class="zoom m-2" *ngFor="let file of el.arrComprobantes" [src]="file" (click)="descargar(file)">
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                        <button  mdbBtn
+
+mdbWavesEffect  type="button" class="btn btn-light" data-dismiss="modal">Cerrar</button>
 </div>
 </div>
 </div>
@@ -35,8 +37,8 @@
 </button>
 </td>
 <td>
-    <button type=" button " class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i) "><i class="fas fa-edit "></i> Modificar</button>
-    <button type="button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
+    <button mdbBtn mdbWavesEffect type=" button " class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i) "><i class="fas fa-edit "></i> Modificar</button>
+    <button mdbBtn mdbWavesEffect type="button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
 </td>
 </tr>
 </tbody>
