--- a/src/styles.css
+++ b/src/styles.css
@@ -355,6 +355,10 @@ input:checked+.slider:before {
     transform: translateX(26px);
 }
 
+.ex {
+    color: red !important;
+}
+
 
 /* Rounded sliders */
 
